# invariant-ekf

./: .clang-format  .gitignore  LIEKF.m  README.md  TestLIEKF.m  loadPoseGPS.m
code/: CMakeHeader.txt  CMakeLists.txt  Readme.md
code/include/: DataLoader.hpp  IEKF.hpp
code/matlab/: LIEKF.m  getZurichData.m  runLeft.m  wedge.m
code/src/: DataLoader.cpp  example.cpp  test_data_loader.cpp
code/tests/: test_example.cpp  test_iekf.cpp
docs/: Makefile  Readme.md  proposal.tex  references.bib  report.tex
docs/sections/: abstract.tex  conclusion.tex  cpp_impl.tex  dyn_derivation.tex  fake_data.tex  introduction.tex  left_invariant_ekf.tex  simulation_results.tex  theoretical_background.tex
docs/sections/figures/legacy__/: fake_data_ang.eps  fake_data_ang_noise.eps  fake_data_pos.eps  fake_data_pos_noise.eps
inekf/: CMakeHeader.cmake  CMakeHeader.txt  CMakeLists.txt  Readme.md
inekf/include/: DataLoader.hpp  IEKF.hpp  example.hpp  utils.hpp
inekf/src/: DataLoader.cpp  IEKF.cpp  iekf_example.cpp  test_data_loader.cpp  utils.cpp
inekf/tests/: test_example.cpp  test_iekf.cpp  test_sophus.cpp  test_utils.cpp
scripts/: EKF.m  LIEKF.m  Readme.md  TestEKF.m  TestLIEKF.m  fake_data_test.m  fake_data_test_ekf.m  fake_data_test_inekf.m  fake_data_test_plot.m  fake_data_test_plot_revised.m  gen_fake_data.m  gen_test_case.m  getZurichData.m  loadGroundTruthAGL.m  loadPoseGPS.m  runLeft.m  zurich_test_ekf.m  zurich_test_inekf.m  zurich_test_plot.m
scripts/deprecated/: fake_data_test_ekf.m  zurich_test_ekf.m
scripts/filters/: EKF.m  LIEKF.m
scripts/helper/: gen_fake_data.m  lieTocartesian.m  loadPoseGPS.m  unscented_transform.m
scripts/legacy/: getZurichData.m
